--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "loga"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 description = "Combined logging and error handling"
 license = "ISC"
@@ -9,3 +9,4 @@ repository = "https://github.com/andrewbaxter/loga"
 
 [dependencies]
 chrono = "0.4.24"
+console = "0.15.7"
